--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="col-md-12 text-center"><img src="https://pbs.twimg.com/profile_images/996748186495545344/PRtXNnLi_400x400.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-        <h4> <strong> <p>Hello! I'm Jefferson I'm working remotely on project for clients.<br></h4></strong>
+        <h4>  <p>Hello! I'm Jefferson I'm working remotely on project for clients.<br></h4>
          <h3> I have diverse set of skills, raging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal CMS website developement.</p></h3>
           <p class="text-center"><a class="btn btn-primary" href="https://drive.google.com/open?id=18zBsctl13E3qV4EOA8vIOZk0-YaymazzLkqGRd13DxA"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
