--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#skills">Skills</a> </li>
+          <li> <a class="page-scroll" href="#education">Education</a> </li>
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
-          <li> <a class="page-scroll" href="#resume">Resume</a> </li>
-          <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+          <li> <a class="page-scroll" href="#experience">Experience</a> </li>
+         <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+           
         </ul>
       </div>
     </div>
@@ -121,7 +123,7 @@
 </div>
 
 <!-- Resume Section -->
-<div id="resume" class="text-center">
+<div id="education" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>Education</h2>
@@ -235,7 +237,7 @@
 </div>
 
 <!-- Resume Section -->
-<div id="resume" class="text-center">
+<div id="experience" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>Experience</h2>
