--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Basic Page Needs
     ================================================== -->
     <title>Jefferson</title>
+	
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="http://webtechtoday.com/">
@@ -65,7 +66,7 @@
                     <h3 class="invert sub-maintitle">Web 
                         <span class="rotate">Developer, Designer, Artist</span><!--SUBTITLE AFTET NAME-->
                     </h3>
-                    <img id="profile-img" class="profile-img transparent" src="images/dp1.jpeg" alt="profile-image"/><!--PROFILE IMAGE-->
+                    <img id="profile-img" class="profile-img transparent" src="images/dp.png" alt="profile-image"/><!--PROFILE IMAGE-->
                 </div><!--/#namecard-->
                 <!--menu-->
                 <div id="menu-container">
