--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h3 class="invert sub-maintitle">Web 
                         <span class="rotate">Developer, Designer, Artist</span><!--SUBTITLE AFTET NAME-->
                     </h3>
-                    <img id="profile-img" class="profile-img transparent" src="images/dp.png" alt="profile-image"/><!--PROFILE IMAGE-->
+                    <img id="profile-img" class="profile-img transparent" src="images/dp1.png" alt="profile-image"/><!--PROFILE IMAGE-->
                 </div><!--/#namecard-->
                 <!--menu-->
                 <div id="menu-container">
